[develop] Fixed alignment of date published on news

--- a/health/sass/components/content-types/_news.scss
+++ b/health/sass/components/content-types/_news.scss
@@ -14,7 +14,7 @@
 
     // Full
     &.view-mode-full {
-      .field-name-field-date-updated,
+      .field-name-field-date-published,
       .field-name-ds-content-type,
       .field-name-field-audience {
         @extend %spaced-inline-label;
